--- a/speaker_workshop.html
+++ b/speaker_workshop.html
@@ -630,253 +630,12 @@ kbd {
     <div class="slide-wrapper">
       <div class="slide hidden" id="slide-2">
         <div data-id="2" class="slide-overlay"></div>
-        <section class="slide-content"><h2 id="what-we-ll-cover-">What we&#39;ll cover:</h2>
-<ul>
-<li>What does an Event look like?</li>
-<li>The Event Store</li>
-<li>How do we create events?</li>
-<li>We have events, now what?</li>
-<li>A short example of how it could work</li>
-</ul>
-</section>
+        <section class="slide-content"></section>
       </div>
     </div>
     <div class="slide-wrapper">
-      <div class="slide hidden" id="slide-3">
+      <div class="slide hidden author-slide" id="slide-3">
         <div data-id="3" class="slide-overlay"></div>
-        <section class="slide-content"><h2 id="what-does-an-event-look-like-">What Does an Event Look Like?</h2>
-<ul>
-<li>An Event is a Class named for the thing that happened</li>
-<li>The event contains attributes that are relevant to that event</li>
-</ul>
-</section>
-      </div>
-    </div>
-    <div class="slide-wrapper">
-      <div class="slide hidden" id="slide-4">
-        <div data-id="4" class="slide-overlay"></div>
-        <section class="slide-content"><h2 id="event-sessiondiscovered">Event: SessionDiscovered</h2>
-<ul>
-<li>after validation to determine whether we have a valid session, we log a new event</li>
-</ul>
-<h3 id="new-sessiondiscovered-attributes-we-need-to-know-">new SessionDiscovered( attributes we need to know )</h3>
-</section>
-      </div>
-    </div>
-    <div class="slide-wrapper">
-      <div class="slide hidden" id="slide-5">
-        <div data-id="5" class="slide-overlay"></div>
-        <section class="slide-content"><h2 id="event-sessiondiscovered">Event: SessionDiscovered</h2>
-<ul>
-<li>session id</li>
-<li>start time</li>
-<li>protocol</li>
-<li>source ip</li>
-<li>destination ip</li>
-<li>source port</li>
-<li>destination port</li>
-</ul>
-</section>
-      </div>
-    </div>
-    <div class="slide-wrapper">
-      <div class="slide hidden" id="slide-6">
-        <div data-id="6" class="slide-overlay"></div>
-        <section class="slide-content"><h2 id="event-sessionscored">Event: SessionScored</h2>
-<ul>
-<li>session id</li>
-<li>threat contributor </li>
-<li>score</li>
-</ul>
-</section>
-      </div>
-    </div>
-    <div class="slide-wrapper">
-      <div class="slide hidden" id="slide-7">
-        <div data-id="7" class="slide-overlay"></div>
-        <section class="slide-content"><h2 id="event-filescored">Event: FileScored</h2>
-<ul>
-<li>after validation that a file has matched a signature, we log a new event</li>
-</ul>
-<h3 id="new-filescored-attributes-we-need-to-know-">new FileScored( attributes we need to know )</h3>
-</section>
-      </div>
-    </div>
-    <div class="slide-wrapper">
-      <div class="slide hidden" id="slide-8">
-        <div data-id="8" class="slide-overlay"></div>
-        <section class="slide-content"><h2 id="event-filescored">Event: FileScored</h2>
-<ul>
-<li>file id</li>
-<li>session id</li>
-<li>integration</li>
-<li>score</li>
-<li>signature that found it</li>
-</ul>
-</section>
-      </div>
-    </div>
-    <div class="slide-wrapper">
-      <div class="slide hidden" id="slide-9">
-        <div data-id="9" class="slide-overlay"></div>
-        <section class="slide-content"><h2 id="event-filerescored">Event: FileRescored</h2>
-<ul>
-<li>after validation that a file has matched a signature and that it has been scored before\n- we log a new event</li>
-</ul>
-<h3 id="new-filerescored-attributes-we-need-to-know-">new FileRescored( attributes we need to know )</h3>
-</section>
-      </div>
-    </div>
-    <div class="slide-wrapper">
-      <div class="slide hidden" id="slide-10">
-        <div data-id="10" class="slide-overlay"></div>
-        <section class="slide-content"><h2 id="event-filerescored">Event: FileRescored</h2>
-<ul>
-<li>file id</li>
-<li>session id</li>
-<li>integration</li>
-<li>new score</li>
-<li>signature that found it</li>
-</ul>
-</section>
-      </div>
-    </div>
-    <div class="slide-wrapper">
-      <div class="slide hidden" id="slide-11">
-        <div data-id="11" class="slide-overlay"></div>
-        <section class="slide-content"><h2 id="event-store-holds-all-events">Event Store holds <em>all</em> events</h2>
-<ul>
-<li>a DB with each row being a Domain Message</li>
-<li>Each Event is the payload of the Domain Message</li>
-<li>The Domain Message has a uuid, timestamp, type, payload (the event itself), and version (if needed)</li>
-<li>this means we can store all events in the same place regardless of the program that logs the event or handles them</li>
-</ul>
-</section>
-      </div>
-    </div>
-    <div class="slide-wrapper">
-      <div class="slide hidden" id="slide-12">
-        <div data-id="12" class="slide-overlay"></div>
-        <section class="slide-content"><h2 id="listeners">Listeners</h2>
-<ul>
-<li>we write listeners for each of the events we care about in a given context</li>
-<li>the listeners view the whole event store but cull the events by their type</li>
-<li>the types of structures that have listeners are projections and aggregate roots</li>
-</ul>
-</section>
-      </div>
-    </div>
-    <div class="slide-wrapper">
-      <div class="slide hidden" id="slide-13">
-        <div data-id="13" class="slide-overlay"></div>
-        <section class="slide-content"><h2 id="projector">Projector</h2>
-<ul>
-<li>a class </li>
-<li>its apply methods contain the logic of what an event means</li>
-<li>writes information to the table that we will need later</li>
-</ul>
-</section>
-      </div>
-    </div>
-    <div class="slide-wrapper">
-      <div class="slide hidden" id="slide-14">
-        <div data-id="14" class="slide-overlay"></div>
-        <section class="slide-content"><p><img src="../img/status_change/projector.png" alt="Projectors"></p>
-</section>
-      </div>
-    </div>
-    <div class="slide-wrapper">
-      <div class="slide hidden" id="slide-15">
-        <div data-id="15" class="slide-overlay"></div>
-        <section class="slide-content"><h2 id="projection-session">Projection: Session</h2>
-<ul>
-<li>listens for SessionDiscovered events<ul>
-<li>creates a new row in a table with the session details and a null score</li>
-</ul>
-</li>
-<li>listens for SessionScored events<ul>
-<li>finds the session in the table and updates the score and score contributor</li>
-</ul>
-</li>
-</ul>
-</section>
-      </div>
-    </div>
-    <div class="slide-wrapper">
-      <div class="slide hidden  " id="slide-16">
-        <div data-id="16" class="slide-overlay"></div>
-        <section class="slide-content"><h2 id="projection-report-for-top-threats-by-hash">Projection: Report for Top Threats by Hash</h2>
-<ul>
-<li>listens for FileScored and FileRescored Events<ul>
-<li>looks up details of file by the file id</li>
-<li>adds a row to table with <ul>
-<li>file id</li>
-<li>file md5 hash</li>
-<li>the filename</li>
-<li>file type</li>
-<li>the score</li>
-<li>signature that scored it</li>
-<li>source ip</li>
-<li>destination ip</li>
-<li>protocol</li>
-</ul>
-</li>
-</ul>
-</li>
-</ul>
-</section>
-      </div>
-    </div>
-    <div class="slide-wrapper">
-      <div class="slide hidden" id="slide-17">
-        <div data-id="17" class="slide-overlay"></div>
-        <section class="slide-content"><h2 id="read-model">Read Model</h2>
-<ul>
-<li>a class</li>
-<li>it contains methods for looking up information from the projection</li>
-<li>ex: look up the history for a certain file, all of its scores</li>
-</ul>
-</section>
-      </div>
-    </div>
-    <div class="slide-wrapper">
-      <div class="slide hidden" id="slide-18">
-        <div data-id="18" class="slide-overlay"></div>
-        <section class="slide-content"><h2 id="read-model-top-threats">Read Model: Top Threats</h2>
-<p>methods: </p>
-<ul>
-<li><p>top 10 threats by the file hash</p>
-<ul>
-<li>this excludes hits I&#39;m not allowed to see by the signature that did the scoring</li>
-<li>gets a current hit count of only the records I can see</li>
-</ul>
-</li>
-<li><p>top threats by file type</p>
-</li>
-<li>top threats by source/destination ip pairs</li>
-<li>top threats by protocol</li>
-</ul>
-</section>
-      </div>
-    </div>
-    <div class="slide-wrapper">
-      <div class="slide hidden" id="slide-19">
-        <div data-id="19" class="slide-overlay"></div>
-        <section class="slide-content"><h2 id="good-stuff-">Good Stuff!</h2>
-<ul>
-<li>works well in our environment where we have multiple applications doing different things</li>
-<li>full audit log of what has happened in our environment</li>
-<li>the results of those events can be optimized for read to shorten the time to retrieve data</li>
-<li>separate the logic of what an event means based on context and purpose</li>
-<li>only display results that a user is allowed to see</li>
-<li>flexible to change, our interpretation of events can change, and we can rebuild projections without losing the full history</li>
-</ul>
-</section>
-      </div>
-    </div>
-    <div class="slide-wrapper">
-      <div class="slide hidden author-slide" id="slide-20">
-        <div data-id="20" class="slide-overlay"></div>
         <section class="slide-content"><div class="author">
   <h1 class="name">Ashley Hunsberger, DeeDee Lavinder, Emily Stamey</h1>
     <h3 class="twitter">
