included more of the outline without details

--- a/speaker_workshop.html
+++ b/speaker_workshop.html
@@ -630,12 +630,105 @@ kbd {
     <div class="slide-wrapper">
       <div class="slide hidden" id="slide-2">
         <div data-id="2" class="slide-overlay"></div>
-        <section class="slide-content"></section>
+        <section class="slide-content"><h1 id="introduction-mixer">Introduction &amp; mixer</h1>
+</section>
       </div>
     </div>
     <div class="slide-wrapper">
-      <div class="slide hidden author-slide" id="slide-3">
+      <div class="slide hidden" id="slide-3">
         <div data-id="3" class="slide-overlay"></div>
+        <section class="slide-content"><h1 id="writing-your-bio">Writing Your Bio</h1>
+</section>
+      </div>
+    </div>
+    <div class="slide-wrapper">
+      <div class="slide hidden" id="slide-4">
+        <div data-id="4" class="slide-overlay"></div>
+        <section class="slide-content"><h1 id="bio-prompt-emily-to-fill-in-">Bio Prompt: .... (emily to fill in)</h1>
+</section>
+      </div>
+    </div>
+    <div class="slide-wrapper">
+      <div class="slide hidden" id="slide-5">
+        <div data-id="5" class="slide-overlay"></div>
+        <section class="slide-content"><h1 id="lead-into-topics-and-ideas-for-talks">Lead into topics and ideas for talks</h1>
+</section>
+      </div>
+    </div>
+    <div class="slide-wrapper">
+      <div class="slide hidden" id="slide-6">
+        <div data-id="6" class="slide-overlay"></div>
+        <section class="slide-content"><h1 id="neha-s-brandin-emily-to-fill-in-">Neha&#39;s brandin (emily to fill in)</h1>
+</section>
+      </div>
+    </div>
+    <div class="slide-wrapper">
+      <div class="slide hidden" id="slide-7">
+        <div data-id="7" class="slide-overlay"></div>
+        <section class="slide-content"><h1 id="lunch">Lunch</h1>
+</section>
+      </div>
+    </div>
+    <div class="slide-wrapper">
+      <div class="slide hidden  " id="slide-8">
+        <div data-id="8" class="slide-overlay"></div>
+        <section class="slide-content"><h1 id="possible-mixer-again-">possible mixer again?</h1>
+</section>
+      </div>
+    </div>
+    <div class="slide-wrapper">
+      <div class="slide hidden" id="slide-9">
+        <div data-id="9" class="slide-overlay"></div>
+        <section class="slide-content"><h1 id="call-for-papers-what-does-that-mean-">Call for Papers.  What does that mean?</h1>
+</section>
+      </div>
+    </div>
+    <div class="slide-wrapper">
+      <div class="slide hidden" id="slide-10">
+        <div data-id="10" class="slide-overlay"></div>
+        <section class="slide-content"><h1 id="tips-for-a-good-abstract">Tips for a good Abstract</h1>
+</section>
+      </div>
+    </div>
+    <div class="slide-wrapper">
+      <div class="slide hidden" id="slide-11">
+        <div data-id="11" class="slide-overlay"></div>
+        <section class="slide-content"><h1 id="get-feedback">Get Feedback</h1>
+</section>
+      </div>
+    </div>
+    <div class="slide-wrapper">
+      <div class="slide hidden" id="slide-12">
+        <div data-id="12" class="slide-overlay"></div>
+        <section class="slide-content"><h1 id="pitch-your-abstract">Pitch Your Abstract</h1>
+<p>  Write a lightning talk to pitch the idea of your talk.  Why is it important?  </p>
+<p>2-3pm</p>
+</section>
+      </div>
+    </div>
+    <div class="slide-wrapper">
+      <div class="slide hidden" id="slide-13">
+        <div data-id="13" class="slide-overlay"></div>
+        <section class="slide-content"><h1 id="pitch-your-idea">Pitch your idea</h1>
+<p>3-4 presenting and feedback</p>
+</section>
+      </div>
+    </div>
+    <div class="slide-wrapper">
+      <div class="slide hidden" id="slide-14">
+        <div data-id="14" class="slide-overlay"></div>
+        <section class="slide-content"><h1 id="resources">Resources</h1>
+<ul>
+<li>HelpMeAbstract.com</li>
+<li>SpeakingEasy</li>
+<li>Rubric for Abstract (to get from AshleyH or AshleyPQP)</li>
+</ul>
+</section>
+      </div>
+    </div>
+    <div class="slide-wrapper">
+      <div class="slide hidden author-slide" id="slide-15">
+        <div data-id="15" class="slide-overlay"></div>
         <section class="slide-content"><div class="author">
   <h1 class="name">Ashley Hunsberger, DeeDee Lavinder, Emily Stamey</h1>
     <h3 class="twitter">
