polishing capital letters and formatting

--- a/speaker_workshop.html
+++ b/speaker_workshop.html
@@ -620,7 +620,7 @@ kbd {
 <ul>
 <li>Ashley Hunsberger</li>
 <li>DeeDee Lavinder</li>
-<li><p>Emily Stamey</p>
+<li><p>Emily Stamey @elstamey</p>
 <p>@WWCodeRaleigh</p>
 </li>
 </ul>
@@ -693,8 +693,8 @@ kbd {
         <div data-id="10" class="slide-overlay"></div>
         <section class="slide-content"><h1 id="mainstream-press">Mainstream Press</h1>
 <ul>
-<li>are you mentioned in press releases/news</li>
-<li>what is newsworthy about you?</li>
+<li>Are you mentioned in press releases/news</li>
+<li>What is newsworthy about you?</li>
 </ul>
 </section>
       </div>
@@ -704,9 +704,9 @@ kbd {
         <div data-id="11" class="slide-overlay"></div>
         <section class="slide-content"><h1 id="affiliations-relationships">Affiliations &amp; Relationships</h1>
 <ul>
-<li>impressive institution you&#39;ve been associated with</li>
-<li>formal education or training</li>
-<li>company you&#39;ve worked for</li>
+<li>Impressive institution you&#39;ve been associated with</li>
+<li>Formal education or training</li>
+<li>Company you&#39;ve worked for</li>
 </ul>
 </section>
       </div>
@@ -799,9 +799,10 @@ kbd {
         <div data-id="20" class="slide-overlay"></div>
         <section class="slide-content"><h1 id="write-your-bio">Write Your Bio</h1>
 <ul>
-<li>write a short blurb and a longer bio</li>
-<li>use descriptive language </li>
-<li>use action verbs</li>
+<li>Write a short blurb (speaker bio, articles, etc)</li>
+<li>Write a longer bio (website, blog, etc)</li>
+<li>Use descriptive language </li>
+<li>Use action verbs</li>
 <li>Sound Excited!</li>
 </ul>
 </section>
@@ -815,7 +816,7 @@ kbd {
 <li>Use the tools you have</li>
 <li>Quantify with data</li>
 <li>Invert the negatives</li>
-<li>give credit to personal experience</li>
+<li>Give credit to personal experience</li>
 </ul>
 </section>
       </div>
@@ -903,54 +904,51 @@ kbd {
       <div class="slide hidden" id="slide-30">
         <div data-id="30" class="slide-overlay"></div>
         <section class="slide-content"><h1 id="lead-into-topics-and-ideas-for-talks">Lead into topics and ideas for talks</h1>
+<ul>
+<li>Things you can teach</li>
+<li>Things you want to learn`</li>
+</ul>
 </section>
       </div>
     </div>
     <div class="slide-wrapper">
       <div class="slide hidden" id="slide-31">
         <div data-id="31" class="slide-overlay"></div>
-        <section class="slide-content"><h1 id="neha-s-brandin-emily-to-fill-in-">Neha&#39;s brandin (emily to fill in)</h1>
-</section>
-      </div>
-    </div>
-    <div class="slide-wrapper">
-      <div class="slide hidden" id="slide-32">
-        <div data-id="32" class="slide-overlay"></div>
         <section class="slide-content"><h1 id="lunch">Lunch</h1>
 </section>
       </div>
     </div>
     <div class="slide-wrapper">
-      <div class="slide hidden  " id="slide-33">
-        <div data-id="33" class="slide-overlay"></div>
+      <div class="slide hidden  " id="slide-32">
+        <div data-id="32" class="slide-overlay"></div>
         <section class="slide-content"><h1 id="possible-mixer-again-">possible mixer again?</h1>
+</section>
+      </div>
+    </div>
+    <div class="slide-wrapper">
+      <div class="slide hidden" id="slide-33">
+        <div data-id="33" class="slide-overlay"></div>
+        <section class="slide-content"><h1 id="call-for-papers-what-does-that-mean-">Call for Papers.  What does that mean?</h1>
 </section>
       </div>
     </div>
     <div class="slide-wrapper">
       <div class="slide hidden" id="slide-34">
         <div data-id="34" class="slide-overlay"></div>
-        <section class="slide-content"><h1 id="call-for-papers-what-does-that-mean-">Call for Papers.  What does that mean?</h1>
+        <section class="slide-content"><h1 id="tips-for-a-good-abstract">Tips for a good Abstract</h1>
 </section>
       </div>
     </div>
     <div class="slide-wrapper">
       <div class="slide hidden" id="slide-35">
         <div data-id="35" class="slide-overlay"></div>
-        <section class="slide-content"><h1 id="tips-for-a-good-abstract">Tips for a good Abstract</h1>
+        <section class="slide-content"><h1 id="get-feedback">Get Feedback</h1>
 </section>
       </div>
     </div>
     <div class="slide-wrapper">
       <div class="slide hidden" id="slide-36">
         <div data-id="36" class="slide-overlay"></div>
-        <section class="slide-content"><h1 id="get-feedback">Get Feedback</h1>
-</section>
-      </div>
-    </div>
-    <div class="slide-wrapper">
-      <div class="slide hidden" id="slide-37">
-        <div data-id="37" class="slide-overlay"></div>
         <section class="slide-content"><h1 id="pitch-your-abstract">Pitch Your Abstract</h1>
 <p>  Write a lightning talk to pitch the idea of your talk.  Why is it important?  </p>
 <p>2-3pm</p>
@@ -958,16 +956,16 @@ kbd {
       </div>
     </div>
     <div class="slide-wrapper">
-      <div class="slide hidden" id="slide-38">
-        <div data-id="38" class="slide-overlay"></div>
+      <div class="slide hidden" id="slide-37">
+        <div data-id="37" class="slide-overlay"></div>
         <section class="slide-content"><h1 id="pitch-your-idea">Pitch your idea</h1>
 <p>3-4 presenting and feedback</p>
 </section>
       </div>
     </div>
     <div class="slide-wrapper">
-      <div class="slide hidden" id="slide-39">
-        <div data-id="39" class="slide-overlay"></div>
+      <div class="slide hidden" id="slide-38">
+        <div data-id="38" class="slide-overlay"></div>
         <section class="slide-content"><h1 id="resources">Resources</h1>
 <ul>
 <li>HelpMeAbstract.com</li>
@@ -978,8 +976,8 @@ kbd {
       </div>
     </div>
     <div class="slide-wrapper">
-      <div class="slide hidden author-slide" id="slide-40">
-        <div data-id="40" class="slide-overlay"></div>
+      <div class="slide hidden author-slide" id="slide-39">
+        <div data-id="39" class="slide-overlay"></div>
         <section class="slide-content"><div class="author">
   <h1 class="name">Ashley Hunsberger, DeeDee Lavinder, Emily Stamey</h1>
     <h3 class="twitter">
