Compiled Ashley's revisions in the CFP section

--- a/speaker_workshop.html
+++ b/speaker_workshop.html
@@ -936,19 +936,117 @@ kbd {
       <div class="slide hidden" id="slide-34">
         <div data-id="34" class="slide-overlay"></div>
         <section class="slide-content"><h1 id="tips-for-a-good-abstract">Tips for a good Abstract</h1>
+<ul>
+<li>Relevance</li>
+<li>Takeaways</li>
+<li>The title is important</li>
+<li>Readability</li>
+<li>Timeframe</li>
+<li>Proofread</li>
+<li><a href="https://twitter.com/friendlytester/status/962782536089956352">https://twitter.com/friendlytester/status/962782536089956352</a></li>
+</ul>
 </section>
       </div>
     </div>
     <div class="slide-wrapper">
       <div class="slide hidden" id="slide-35">
         <div data-id="35" class="slide-overlay"></div>
-        <section class="slide-content"><h1 id="get-feedback">Get Feedback</h1>
+        <section class="slide-content"><h1 id="relevance">Relevance</h1>
+<ul>
+<li>Is it targeted to the conference and the audience?</li>
+<li>Is it unique? Why is your talk better than the other 40 submissions on this topic?</li>
+<li>Is the topic current?</li>
+</ul>
 </section>
       </div>
     </div>
     <div class="slide-wrapper">
       <div class="slide hidden" id="slide-36">
         <div data-id="36" class="slide-overlay"></div>
+        <section class="slide-content"><h1 id="takeaways">Takeaways</h1>
+<ul>
+<li>What will I learn?</li>
+<li>What can attendees take back to work?</li>
+</ul>
+</section>
+      </div>
+    </div>
+    <div class="slide-wrapper">
+      <div class="slide hidden" id="slide-37">
+        <div data-id="37" class="slide-overlay"></div>
+        <section class="slide-content"><h1 id="the-title">The Title</h1>
+<ul>
+<li>The first thing reviewers see</li>
+<li>Sets the scene for the rest of the abstract</li>
+<li>Positivity!</li>
+</ul>
+</section>
+      </div>
+    </div>
+    <div class="slide-wrapper">
+      <div class="slide hidden" id="slide-38">
+        <div data-id="38" class="slide-overlay"></div>
+        <section class="slide-content"><h1 id="readability">Readability</h1>
+<ul>
+<li>Does it flow? Do you jump around too much? </li>
+<li>Does it have a beginning, middle and end?</li>
+<li>Keep it concise. Make your words count.</li>
+</ul>
+</section>
+      </div>
+    </div>
+    <div class="slide-wrapper">
+      <div class="slide hidden" id="slide-39">
+        <div data-id="39" class="slide-overlay"></div>
+        <section class="slide-content"><h1 id="timeframe">Timeframe</h1>
+<ul>
+<li>How long is your talk?</li>
+<li>Will it fit in a 30 minute slot?</li>
+</ul>
+</section>
+      </div>
+    </div>
+    <div class="slide-wrapper">
+      <div class="slide hidden" id="slide-40">
+        <div data-id="40" class="slide-overlay"></div>
+        <section class="slide-content"><h1 id="proofread-">Proofread!</h1>
+<ul>
+<li>Have you read your abstract?</li>
+<li>Read it again. Now do it one more time!</li>
+</ul>
+</section>
+      </div>
+    </div>
+    <div class="slide-wrapper">
+      <div class="slide hidden" id="slide-41">
+        <div data-id="41" class="slide-overlay"></div>
+        <section class="slide-content"><h1 id="write-a-talk-proposal-">Write a talk proposal!</h1>
+<ul>
+<li>3 minutes to brainstorom a proposal for a 30-minute presentation</li>
+<li>Start writing proposal, following worksheet</li>
+<li>5 minutes</li>
+</ul>
+</section>
+      </div>
+    </div>
+    <div class="slide-wrapper">
+      <div class="slide hidden" id="slide-42">
+        <div data-id="42" class="slide-overlay"></div>
+        <section class="slide-content"><h1 id="give-get-feedback">Give/Get Feedback</h1>
+<ul>
+<li>Actionable, Specific, and Kind</li>
+<li>Can you identify what the talk is about?</li>
+<li>Can you identify the takeaways?</li>
+<li>Does it have enough relevance to the attendees?</li>
+<li>Will this talk fit in the allotted timeframe?</li>
+<li>RESOURCE: Paper.</li>
+</ul>
+</section>
+      </div>
+    </div>
+    <div class="slide-wrapper">
+      <div class="slide hidden" id="slide-43">
+        <div data-id="43" class="slide-overlay"></div>
         <section class="slide-content"><h1 id="pitch-your-abstract">Pitch Your Abstract</h1>
 <p>  Write a lightning talk to pitch the idea of your talk.  Why is it important?</p>
 <p>2-3pm</p>
@@ -956,16 +1054,16 @@ kbd {
       </div>
     </div>
     <div class="slide-wrapper">
-      <div class="slide hidden" id="slide-37">
-        <div data-id="37" class="slide-overlay"></div>
+      <div class="slide hidden" id="slide-44">
+        <div data-id="44" class="slide-overlay"></div>
         <section class="slide-content"><h1 id="pitch-your-idea">Pitch your idea</h1>
 <p>3-4 presenting and feedback</p>
 </section>
       </div>
     </div>
     <div class="slide-wrapper">
-      <div class="slide hidden" id="slide-38">
-        <div data-id="38" class="slide-overlay"></div>
+      <div class="slide hidden" id="slide-45">
+        <div data-id="45" class="slide-overlay"></div>
         <section class="slide-content"><h1 id="resources">Resources</h1>
 <ul>
 <li>HelpMeAbstract.com</li>
@@ -976,8 +1074,8 @@ kbd {
       </div>
     </div>
     <div class="slide-wrapper">
-      <div class="slide hidden author-slide" id="slide-39">
-        <div data-id="39" class="slide-overlay"></div>
+      <div class="slide hidden author-slide" id="slide-46">
+        <div data-id="46" class="slide-overlay"></div>
         <section class="slide-content"><div class="author">
   <h1 class="name">Ashley Hunsberger, DeeDee Lavinder, Emily Stamey</h1>
     <h3 class="twitter">
