--- a/speaker_workshop.html
+++ b/speaker_workshop.html
@@ -1679,11 +1679,35 @@ body {
           <article>
             <h1 id="preparing-your-first-conference-talk-">Preparing Your First Conference Talk!</h1>
 <ul>
-<li>Ashley Hunsberger</li>
+<li>Ashley Hunsberger @aahunsberger</li>
 <li>DeeDee Lavinder</li>
 <li><p>Emily Stamey @elstamey</p>
 <p>@WWCodeRaleigh</p>
 </li>
+</ul>
+<p><img src="./WWCode_Logo_Raleigh_Durham.png" alt="WWCRDU logo"></p>
+
+          </article>
+      </myColBox>
+  </section>
+  <section>
+      <myColBox>
+          <article>
+            <p><img src="./WWCode_Logo_Raleigh_Durham.png" alt="WWCRDU logo"></p>
+
+          </article>
+      </myColBox>
+  </section>
+  <section>
+      <myColBox>
+          <article>
+            <h1 id="mixer-ideas">Mixer ideas</h1>
+<ul>
+<li>What kind of shoes are you wearing?</li>
+<li>What is your favorite </li>
+<li>Where did you live when you took your first tech job?</li>
+<li>What is your favorite conference?</li>
+<li>What is your favorite language or technology?</li>
 </ul>
 
           </article>
@@ -1692,7 +1716,17 @@ body {
   <section>
       <myColBox>
           <article>
-            <h1 id="introduction-mixer">Introduction &amp; mixer</h1>
+            <h1 id="let-s-sit-down-and-get-started">Let&#39;s sit down and get started</h1>
+
+          </article>
+      </myColBox>
+  </section>
+  <section>
+      <myColBox>
+          <article>
+            <h1 id="resources-for-today">Resources for today</h1>
+<p><a href="http://github.com/elstamey/wwcrdu-presentations">http://github.com/elstamey/wwcrdu-presentations</a></p>
+<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSctj9HJr-5yadDbKYygBYBfNUWmjgODlkp8lgLou26AedIkuQ/viewform">Join us on Slack</a></p>
 
           </article>
       </myColBox>
@@ -1710,6 +1744,7 @@ body {
           <article>
             <h1 id="bio-prompts">Bio Prompts</h1>
 <ul>
+<li>Clear your mind</li>
 <li>We are going to give you prompts</li>
 <li>Fill them in as best as you can</li>
 <li>You can come back to these later to write your bio</li>
@@ -1729,7 +1764,7 @@ body {
   <section>
       <myColBox>
           <article>
-            <h1 id="write-5-tech-things-you-can-teach">Write 5 TECH things you can teach</h1>
+            <h1 id="write-5-things-you-can-teach">Write 5 things you can teach</h1>
 
           </article>
       </myColBox>
@@ -1763,7 +1798,7 @@ body {
           <article>
             <h1 id="mainstream-press">Mainstream Press</h1>
 <ul>
-<li>Are you mentioned in press releases/news</li>
+<li>Are you mentioned in a press release/news?</li>
 <li>What is newsworthy about you?</li>
 </ul>
 
@@ -1794,14 +1829,6 @@ body {
   <section>
       <myColBox>
           <article>
-            <h1 id="what-roles-have-you-worked-">What Roles Have You Worked?</h1>
-
-          </article>
-      </myColBox>
-  </section>
-  <section>
-      <myColBox>
-          <article>
             <h1 id="what-are-your-skills-">What are Your Skills?</h1>
 <ul>
 <li>languages</li>
@@ -1816,6 +1843,14 @@ body {
       <myColBox>
           <article>
             <h1 id="what-are-your-strengths-">What Are Your Strengths?</h1>
+
+          </article>
+      </myColBox>
+  </section>
+  <section>
+      <myColBox>
+          <article>
+            <h1 id="what-roles-have-you-worked-">What Roles Have You Worked?</h1>
 
           </article>
       </myColBox>
@@ -1850,7 +1885,7 @@ body {
   <section>
       <myColBox>
           <article>
-            <h1 id="what-are-challenges-you-have-faced-overcome-">What are Challenges You Have Faced/Overcome?</h1>
+            <h2 id="what-are-challenges-you-have-faced-overcome-">What are Challenges You Have Faced/Overcome?</h2>
 <ul>
 <li>What did you learn?</li>
 <li>What strengthened and reinforced your roots?</li>
@@ -1862,11 +1897,59 @@ body {
   <section>
       <myColBox>
           <article>
-            <h1 id="review-your-list-of-lists">Review Your List of Lists</h1>
+            <h1 id="branding-yourself">Branding Yourself</h1>
+<p><a href="https://www.safaribooksonline.com/library/view/oscon-2017-/9781491976227/video309578.html">Branding is More Than Self Promotion - Neha Batra</a></p>
+
+          </article>
+      </myColBox>
+  </section>
+  <section>
+      <myColBox>
+          <article>
+            <h1 id="what-3-words-do-you-want-people-to-use-to-describe-you-">What 3 words do you want people to use to describe you?</h1>
+
+          </article>
+      </myColBox>
+  </section>
+  <section>
+      <myColBox>
+          <article>
+            <h1 id="write-to-3-people-you-work-with">Write to 3 people you work with</h1>
+<ul>
+<li>Ask them to use 3 words to describe you</li>
+</ul>
+<p><code>I&#39;m in the middle of a talk, and I need you to tell me this. What are my top three qualities?</code></p>
+
+          </article>
+      </myColBox>
+  </section>
+  <section>
+      <myColBox>
+          <article>
+            <h1 id="compare-their-3-words-with-yours">Compare Their 3 Words With Yours</h1>
+<ul>
+<li>What could you do more of to represent a word they didn&#39;t use to describe you?</li>
+</ul>
+
+          </article>
+      </myColBox>
+  </section>
+  <section>
+      <myColBox>
+          <article>
+            <h1 id="crafting-your-bio">Crafting your Bio</h1>
+
+          </article>
+      </myColBox>
+  </section>
+  <section>
+      <myColBox>
+          <article>
+            <h2 id="review-your-list-of-lists">Review Your List of Lists</h2>
 <ul>
 <li>Use a highlighter</li>
-<li>Excited</li>
-<li>Proud</li>
+<li>What makes you excited?</li>
+<li>What makes you proud?</li>
 <li>What do you want to use in the future?</li>
 <li>Are there any recurring themes/threads?</li>
 </ul>
@@ -1934,9 +2017,9 @@ body {
           <article>
             <h1 id="be-specific">Be Specific</h1>
 <ul>
-<li>I’ve been a for x years</li>
+<li>I’ve been a ____ for x years</li>
 <li>I organize</li>
-<li>Recently i’ve been</li>
+<li>Recently I’ve been</li>
 </ul>
 
           </article>
@@ -1953,8 +2036,6 @@ body {
   <section>
       <myColBox>
           <article>
-            <h1 id="branding-yourself">Branding Yourself</h1>
-<p><a href="https://www.safaribooksonline.com/library/view/oscon-2017-/9781491976227/video309578.html">Branding is More Than Self Promotion - Neha Batra</a></p>
 
           </article>
       </myColBox>
@@ -1962,41 +2043,12 @@ body {
   <section>
       <myColBox>
           <article>
-            <h1 id="what-3-words-do-you-want-people-to-use-to-describe-you-">What 3 words do you want people to use to describe you?</h1>
-
-          </article>
-      </myColBox>
-  </section>
-  <section>
-      <myColBox>
-          <article>
-            <h1 id="write-to-3-people-you-work-with">Write to 3 people you work with</h1>
-<ul>
-<li>Ask them to use 3 words to describe you</li>
-</ul>
-<p><code>I&#39;m in the middle of a talk, and I need you to tell me this. What are my top three qualities?</code></p>
-
-          </article>
-      </myColBox>
-  </section>
-  <section>
-      <myColBox>
-          <article>
-            <h1 id="compare-their-3-words-with-yours">Compare Their 3 Words With Yours</h1>
-<ul>
-<li>What could you do more of to represent a word they didn&#39;t use to describe you?</li>
-</ul>
-
-          </article>
-      </myColBox>
-  </section>
-  <section>
-      <myColBox>
-          <article>
-            <h1 id="lead-into-topics-and-ideas-for-talks">Lead into topics and ideas for talks</h1>
+            <h1 id="topics-and-ideas-for-talks">Topics and ideas for talks</h1>
 <ul>
 <li>Things you can teach</li>
 <li>Things you want to learn`</li>
+<li>A story about something you or your team did</li>
+<li>Something you&#39;ve accomplished</li>
 </ul>
 
           </article>
@@ -2006,14 +2058,7 @@ body {
       <myColBox>
           <article>
             <h1 id="lunch">Lunch</h1>
-
-          </article>
-      </myColBox>
-  </section>
-  <section>
-      <myColBox>
-          <article>
-            <h1 id="possible-mixer-again-">possible mixer again?</h1>
+<p><img src="spreedly.png" alt="sponsored by Spreedly"></p>
 
           </article>
       </myColBox>
@@ -2022,6 +2067,76 @@ body {
       <myColBox>
           <article>
             <h1 id="call-for-papers-what-does-that-mean-">Call for Papers.  What does that mean?</h1>
+
+          </article>
+      </myColBox>
+  </section>
+  <section>
+      <myColBox>
+          <article>
+            <h1 id="call-for-papers">Call For Papers</h1>
+<ul>
+<li>Have a deadline for submissions (time zones are important)</li>
+<li>Some conferences accept talks while the CFP is open</li>
+<li>Submissions are reviewed by a committee, sometimes blindly</li>
+<li>Keynotes are often decided outside of CFP</li>
+</ul>
+
+          </article>
+      </myColBox>
+  </section>
+  <section>
+      <myColBox>
+          <article>
+            <h1 id="speaker-package">Speaker Package</h1>
+<p><strong> Read it carefully </strong></p>
+<ul>
+<li>May provide hotel and airfare</li>
+<li>May offer reimbursement up to an amount<ul>
+<li>Pay attention to how they will reimburse</li>
+</ul>
+</li>
+</ul>
+
+          </article>
+      </myColBox>
+  </section>
+  <section>
+      <myColBox>
+          <article>
+            <h1 id="you-submit-an-abstract">You submit an abstract</h1>
+<ul>
+<li>Provide a description of your talk <ul>
+<li>if accepted, this is put on the conference website</li>
+</ul>
+</li>
+</ul>
+
+          </article>
+      </myColBox>
+  </section>
+  <section>
+      <myColBox>
+          <article>
+            <h1 id="other-info">Other info</h1>
+<ul>
+<li>Often a notes section<ul>
+<li>past or upcoming speaker experience</li>
+<li>additional description of your talk</li>
+<li>Learning Objectives (attendees will learn...)</li>
+</ul>
+</li>
+<li>Do you need travel assistance?  <strong>YES!</strong></li>
+<li>Give airport code</li>
+</ul>
+
+          </article>
+      </myColBox>
+  </section>
+  <section>
+      <myColBox>
+          <article>
+            <h1 id="the-abstract">The abstract</h1>
 
           </article>
       </myColBox>
