--- a/speaker_workshop.html
+++ b/speaker_workshop.html
@@ -1704,7 +1704,7 @@ body {
             <h1 id="mixer-ideas">Mixer ideas</h1>
 <ul>
 <li>What kind of shoes are you wearing?</li>
-<li>What is your favorite </li>
+<li>What is your favorite</li>
 <li>Where did you live when you took your first tech job?</li>
 <li>What is your favorite conference?</li>
 <li>What is your favorite language or technology?</li>
@@ -2106,7 +2106,7 @@ body {
           <article>
             <h1 id="you-submit-an-abstract">You submit an abstract</h1>
 <ul>
-<li>Provide a description of your talk <ul>
+<li>Provide a description of your talk<ul>
 <li>if accepted, this is put on the conference website</li>
 </ul>
 </li>
@@ -2203,7 +2203,10 @@ body {
 <ul>
 <li>Does it flow? Do you jump around too much? </li>
 <li>Does it have a beginning, middle and end?</li>
-<li>Keep it concise. Make your words count.</li>
+<li>Keep it concise. Make your words count.<ul>
+<li>Use action verbs</li>
+</ul>
+</li>
 </ul>
 
           </article>
@@ -2286,8 +2289,8 @@ body {
           <article>
             <h1 id="resources">Resources</h1>
 <ul>
-<li>HelpMeAbstract.com</li>
-<li>SpeakingEasy</li>
+<li><a href="HelpMeAbstract.com">HelpMeAbstract.com</a></li>
+<li><a href="http://speaking-easy.com/">SpeakingEasy</a></li>
 <li>Rubric for Abstract (to get from AshleyH or AshleyPQP)</li>
 </ul>
 
