--- a/speaker_workshop.html
+++ b/speaker_workshop.html
@@ -605,7 +605,6 @@ kbd {
 }
 
   </style>
-    <script async src="http://localhost:35729/livereload.js"></script>
 </head>
 <body>
     <div class="progress">
@@ -792,8 +791,8 @@ kbd {
       <div class="slide hidden" id="slide-20">
         <div data-id="20" class="slide-overlay"></div>
         <section class="slide-content"><h2 id="what-s-your-unique-value-proposition-">What’s Your Unique VALUE PROPOSITION?</h2>
-<p>-fragment Whoever is consuming what you’re giving needs to know what they will get from you?</p>
 <ul>
+<li>Whoever is consuming what you’re giving needs to know what they will get from you?</li>
 <li>What can you uniquely give to the world based on what you’ve done?</li>
 <li>What is the lens through which your content is filtered?</li>
 </ul>
