updated intro, mixer, 3 words, added W/S/C link, and updated readme

--- a/speaker_workshop.html
+++ b/speaker_workshop.html
@@ -1832,7 +1832,7 @@ h5.attrib a:hover {
             <h1 id="preparing-your-first-conference-talk-">Preparing Your First Conference Talk!</h1>
 <ul>
 <li>Ashley Hunsberger @aahunsberger</li>
-<li>DeeDee Lavinder</li>
+<li>DeeDee Lavinder @ddlavinder</li>
 <li>Emily Stamey @elstamey
 @WWCodeRaleigh</li>
 </ul>
@@ -1852,14 +1852,47 @@ h5.attrib a:hover {
   <section>
       <myColBox>
           <article>
-            <h1 id="mixer-ideas">Mixer ideas</h1>
-<ul>
-<li>What kind of shoes are you wearing?</li>
-<li>What is your favorite color?</li>
-<li>Where did you live when you took your first tech job?</li>
-<li>What is your favorite conference?</li>
-<li>What is your favorite language or technology?</li>
-</ul>
+            <h1 id="what-kind-of-shoes-are-you-wearing-">What kind of shoes are you wearing?</h1>
+
+          </article>
+      </myColBox>
+  </section>
+  <section>
+      <myColBox>
+          <article>
+            <h1 id="what-is-your-favorite-color-">What is your favorite color?</h1>
+
+          </article>
+      </myColBox>
+  </section>
+  <section>
+      <myColBox>
+          <article>
+            <h1 id="how-many-tattoos-or-piercings-do-you-have-">How many tattoos or piercings do you have?</h1>
+
+          </article>
+      </myColBox>
+  </section>
+  <section>
+      <myColBox>
+          <article>
+            <h1 id="where-did-you-live-when-you-took-your-first-tech-job-">Where did you live when you took your first tech job?</h1>
+
+          </article>
+      </myColBox>
+  </section>
+  <section>
+      <myColBox>
+          <article>
+            <h1 id="what-is-your-favorite-conference-">What is your favorite conference?</h1>
+
+          </article>
+      </myColBox>
+  </section>
+  <section>
+      <myColBox>
+          <article>
+            <h1 id="what-is-your-favorite-language-or-technology-">What is your favorite language or technology?</h1>
 
           </article>
       </myColBox>
@@ -1878,6 +1911,38 @@ h5.attrib a:hover {
             <h1 id="resources-for-today">Resources for today</h1>
 <p><a href="http://github.com/elstamey/wwcrdu-presentations">http://github.com/elstamey/wwcrdu-presentations</a></p>
 <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSctj9HJr-5yadDbKYygBYBfNUWmjgODlkp8lgLou26AedIkuQ/viewform">Join us on Slack</a></p>
+<p>Join the <code>#raleigh-durham</code> channel</p>
+
+          </article>
+      </myColBox>
+  </section>
+  <section>
+      <myColBox>
+          <article>
+            <h1 id="branding-yourself">Branding Yourself</h1>
+<ul>
+<li><a href="https://www.safaribooksonline.com/library/view/oscon-2017-/9781491976227/video309578.html">Branding is More Than Self Promotion - Neha Batra</a></li>
+<li><a href="https://www.slideshare.net/NehaBatra5/personal-branding-is-more-than-self-promotion-81439467">slides</a></li>
+<li><a href="https://builttoadapt.io/why-a-personal-brand-is-necessary-for-todays-developer-f0f18bfaa033">blog</a></li>
+</ul>
+
+          </article>
+      </myColBox>
+  </section>
+  <section>
+      <myColBox>
+          <article>
+            <h2 id="what-3-words-do-you-want-people-to-use-to-describe-you-">What 3 words do you want people to use to describe you?</h2>
+
+          </article>
+      </myColBox>
+  </section>
+  <section>
+      <myColBox>
+          <article>
+            <h2 id="write-to-3-people-you-work-with">Write to 3 people you work with</h2>
+<p>Ask them to use 3 words to describe you</p>
+<p><code>&quot;I&#39;m in the middle of a talk, and I need you to tell me this. What are my top three qualities?&quot;</code></p>
 
           </article>
       </myColBox>
@@ -2016,6 +2081,7 @@ h5.attrib a:hover {
 <li>Schools/education/certificates</li>
 <li>Projects you&#39;ve worked on</li>
 </ul>
+
           </article>
       </myColBox>
   </section>
@@ -2023,7 +2089,6 @@ h5.attrib a:hover {
       <myColBox>
           <article>
             <h2 id="what-s-your-unique-value-proposition-">What’s Your Unique VALUE PROPOSITION?</h2>
-<p>-fragment Whoever is consuming what you’re giving needs to know what they will get from you?</p>
 <ul>
 <li>Whoever is consuming what you’re giving needs to know what they will get from you?</li>
 <li>What can you uniquely give to the world based on what you’ve done?</li>
@@ -2048,28 +2113,7 @@ h5.attrib a:hover {
   <section>
       <myColBox>
           <article>
-            <h1 id="branding-yourself">Branding Yourself</h1>
-<p><a href="https://www.safaribooksonline.com/library/view/oscon-2017-/9781491976227/video309578.html">Branding is More Than Self Promotion - Neha Batra</a></p>
-
-          </article>
-      </myColBox>
-  </section>
-  <section>
-      <myColBox>
-          <article>
-            <h1 id="what-3-words-do-you-want-people-to-use-to-describe-you-">What 3 words do you want people to use to describe you?</h1>
-
-          </article>
-      </myColBox>
-  </section>
-  <section>
-      <myColBox>
-          <article>
-            <h1 id="write-to-3-people-you-work-with">Write to 3 people you work with</h1>
-<ul>
-<li>Ask them to use 3 words to describe you</li>
-</ul>
-<p><code>I&#39;m in the middle of a talk, and I need you to tell me this. What are my top three qualities?</code></p>
+            <h1 id="remember-those-three-words-">Remember Those Three Words?</h1>
 
           </article>
       </myColBox>
@@ -2442,7 +2486,7 @@ h5.attrib a:hover {
 <ul>
 <li><a href="HelpMeAbstract.com">HelpMeAbstract.com</a></li>
 <li><a href="http://speaking-easy.com/">SpeakingEasy</a></li>
-<li>Rubric for Abstract (to get from AshleyH or AshleyPQP)</li>
+<li><a href="https://www.writespeakcode.com/">Write/Speak/Code Conference Aug 1-4 NYC</a></li>
 </ul>
 
           </article>
